# Recall

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  lib.rs  main.rs  session.rs  ui.rs
src/providers/: claude.rs  codex.rs  copilot.rs  mod.rs
tests/: app_test.rs  providers_test.rs  session_test.rs
