[package]
name = "recall-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "TUI session browser for GitHub Copilot CLI"
license = "MIT"
repository = "https://github.com/OriginalMHV/recall"
keywords = ["copilot", "tui", "session", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
